--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,18 +13,16 @@ MACS2_PATH: '~/.conda/envs/macs2/bin/macs2'
 
 HARs: '../resources/sheets/HARs_capra_2019_supp_table_5.csv'
 
-ATAC_CELL_TYPES:
-    FC.ExN:
-    FC.InN:
-    FC.RG:
-    FC.MG:
-    FC.undef:
-    LGE.InN:  
-    MGE.InN:  
-    CGE.InN:  
-    GE.RG:    
-    GE.Undef: 
+CELL_TYPES:
+    CGE:
+    LGE:
+    MGE:
+    progenitor:
+    union:
 
+GENE_WINDOW:
+    100UP_100DOWN:
+    
 LDSR_CELL_TYPES:
     FC.ExN:
     FC.InN:
@@ -39,18 +37,9 @@ LDSR_CELL_TYPES:
     GE.Undef:
     GE.UNION:
 
-LDSC_GWAS:
+LDSR_GWAS:
     SCZ:
-    BPD:
-    ASD:
-    ADHD:
-#    HEIGHT:
-    MDD:
-    INSMNA: '../resources/gwas_sumstats/Insomnia_sumstats_Jansenetal.txt.gz'               
-    NRTCSM: '../resources/gwas_sumstats/neuroticism.gwas.full_fixHeader.txt.gz'
-    BV: '../resources/gwas_sumstats/meta_analysis_BV_Jansenetal_2020.sumstats.txt.gz'  
-#     AD: '../resources/gwas_sumstats/PGCALZ2sumstatsExcluding23andMe_fixHeader.txt.gz'
-    INTEL: '../resources/gwas_sumstats/SavageJansen_2018_intelligence_metaanalysis.txt.gz'
+    HEIGHT:
 
 LDSR_CONDITIONS: '../resources/sheets/LDSR_conditions.tsv'
 
@@ -69,13 +58,4 @@ LDSR_CONDITIONAL:
 PEAK_EXTENSION:
     ext250bp:
     ext500bp:
-
-LSI_PARAMS:
-    Iteration:
-    Resolution:
-    Variable_Features:
-    Max_Clusters:
-    N_starts:
-    Dimensions:
-    Sample_cells:
 
