Rerun SLDSR after extension fix

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ results/03SIGNAC/
 results/04FRAGMENT_FILES/
 workflow/.DS_Store
 workflow/scripts/.DS_Store
+results/06LDSR/ZIFFRA_PEAKS/part_herit/baseline_v1.2/*.results
+results/06LDSR/ZIFFRA_PEAKS/part_herit/baseline_v1.2/*.log
+results/06LDSR/part_herit/baseline_v1.2/*.results
+results/06LDSR/part_herit/baseline_v1.2/*.log 
+results/06LDSR/annotation_files/
+results/06LDSR/ZIFFRA_PEAKS/annotation_files/
+results/06LDSR/part_herit/baseline_v1.2/*baseline.v1.2.log
+results/00LOGS/
