--- a/config/config.yaml
+++ b/config/config.yaml
@@ -26,6 +26,11 @@ SLDSR_CELL_TYPES:
     MGE:
     progenitor:
 
+UNIQUE_CELL_TYPES:
+    CGE:
+    LGE:
+    MGE:
+
 GENE_WINDOW:
     100UP_100DOWN:
     
