--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -4,6 +4,7 @@ include: "rules/snATACseq_cellRanger.smk"
 include: "rules/snATACseq_archR_processing.smk"
 include: "rules/snATACseq_LDSR.smk"
 include: "rules/snATACseq_LDSR_conditional.smk"
+include: "rules/snATACseq_LDSR_unique.smk"
 
 localrules: ldsr_get_lift_over_files, ldsr_stratified_summary
 
@@ -13,4 +14,5 @@ rule all:
         expand("../results/03MARKDOWN/snATACseq_QC_{REGION}.html", REGION = config['ATAC_REGIONS']),
         expand("../results/06LDSR/annotation_files/snATACseq.{CELL_TYPE}.{CHR}.l2.ldscore.gz", CELL_TYPE = config["CELL_TYPES"], CHR = range(1,23)),
         expand("../results/06LDSR/part_herit/baseline_v1.2/snATACseq_LDSR_{GWAS}_baseline.v1.2_summary.tsv", GWAS = config['LDSR_GWAS']),        
-        expand("../results/06LDSR/CONDITIONAL_PEAKS/part_herit/baseline_v1.2/snATACseq_LDSR_{GWAS}_baseline.v1.2_summary.tsv", GWAS = config['LDSR_GWAS']) 
+        expand("../results/06LDSR/CONDITIONAL_PEAKS/part_herit/baseline_v1.2/snATACseq_LDSR_{GWAS}_baseline.v1.2_summary.tsv", GWAS = config['LDSR_GWAS']),
+        expand("../results/06LDSR/part_herit/baseline_v1.2/unique_peaks/snATACseq_LDSR_{GWAS}_baseline.v1.2_summary.tsv", GWAS = config['LDSR_GWAS'])
